--- a/index.html
+++ b/index.html
@@ -105,19 +105,20 @@
             box-sizing: border-box;
         }
         footer {
-            text-align: center;
-            margin: 10px auto 0;
-            padding: 0.5px;
+            position: static;
             background-color: #112075;
             color: white;
-            border-radius: 20px;
-            font-size: 1em;
-            max-width: 90%;
+            padding: 5px 0;
+            text-align: center;
+            font-size: 0.8em;
+            width: 100%;
+            box-sizing: border-box;
+            margin: 10px auto 0;
         }
-      .datos-carrera-container {
+        .datos-carrera-container {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem; /* Reducido el espacio entre filas */
     padding: 1rem;
     background-color: hsl(66, 88%, 49%);
     border-radius: 8px;
@@ -127,7 +128,7 @@
 .fila {
     display: flex;
     justify-content: space-between;
-    gap: 1rem;
+    gap: 0.5rem; /* Reducido el espacio entre elementos en una fila */
 }
 
 .campo {
@@ -140,19 +141,19 @@
     font-size: 1rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
- }
+}
 
-.dato-carrera {
+ .dato-carrera {
     font-size: 1rem;
     padding: 0.5rem;
     border: 1px solid #ddd;
     border-radius: 4px;
 }
 
+/* Agrupando los campos de horas y minutos en una fila */
 .time-input {
     display: flex;
     gap: 0.5rem;
-    
 }
 
 .btn-calcular {
@@ -174,42 +175,49 @@
     font-size: 0.875rem;
     color: #ff0000;
 }
+/* Asegura que el resultado de ritmo objetivo sea blanco */
+#ritmoObjetivo {
+    background-color: #fff;
+    color: #333;
+    padding: 0.5rem;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
 </style>
 </head>
 <body>
-    <div id="creator-info">Desarrollada por Diego Valdés</div>
+    <div id="creator-info">RunnersPace Pro</div>
     <div class="container">
-        <h1>Alcanza tu ritmo</h1>
-      <div class="datos-carrera-container">
-    <div class="fila">
-        <div class="campo">
-            <p class="label"><i class="fas fa-running"></i> Nombre de la Carrera</p>
-            <input type="text" id="nombreCarrera" placeholder="Nombre de la carrera" class="dato-carrera">
-        </div>
-        <div class="campo">
-            <p class="label"><i class="fas fa-road"></i> 📏 Distancia Objetivo</p>
-            <input type="number" id="distanciaObjetivo" placeholder="Distancia objetivo (km)" value="0" class="dato-carrera">
-        </div>
-    </div>
-    <div class="fila">
-        <div class="campo">
-            <p class="label">⏱️ Tiempo Objetivo</p>
-            <div class="time-input">
-              <label for="tiempoObjetivoHoras">(horas)</label>
-          </div>
-                <input type="number" id="tiempoObjetivoHoras" placeholder="Horas" value="0" class="dato-carrera">
-          <label for="tiempoObjetivoMinutos">(minutos)</label>
-                <input type="number" id="tiempoObjetivoMinutos" placeholder="Minutos" value="0" class="dato-carrera">
+        <h1>Escoge tu Ritmo</h1>
+        <div class="datos-carrera-container">
+            <div class="fila">
+                <div class="campo">
+                    <p class="label"><i class="fas fa-running"></i> Nombre de la Carrera</p>
+                    <input type="text" id="nombreCarrera" placeholder="Nombre de la carrera" class="dato-carrera">
+                </div>
+                <div class="campo">
+                    <p class="label"><i class="fas fa-road"></i> 📏 Distancia Objetivo</p>
+                    <input type="number" id="distanciaObjetivo" placeholder="Distancia objetivo (km)" value="0" class="dato-carrera">
+                </div>
+            </div>
+            <div class="fila">
+                <div class="campo">
+                    <p class="label">⏱️ Tiempo Objetivo</p>
+                    <div class="time-input">
+                        <input type="number" id="tiempoObjetivoHoras" placeholder="Horas" value="0" class="dato-carrera">
+                        <input type="number" id="tiempoObjetivoMinutos" placeholder="Minutos" value="0" class="dato-carrera">
+                    </div>
+                </div>
+            </div>
+            <div class="campo">
+                <p class="label">🏃‍♂️ Ritmo Objetivo</p>
+                <div id="ritmoObjetivo" class="dato-carrera">min/km</div>
             </div>
         </div>
-        <div class="campo">
-            <p class="label">🏃‍♂️ Ritmo Objetivo</p>
-            <div id="ritmoObjetivo" class="dato-carrera">min/km</div>
-        </div>
-    </div>
     <button onclick="calcularRitmo()" class="btn-calcular">Calcular Ritmo</button>
     <div id="feedbackInicio" class="feedback"></div>
 </div>
+<div id="feedback" class="card"></div>
         </div>
         <div class="card">
             <div class="button-group">
@@ -221,22 +229,18 @@
                 <button onclick="nuevaCarrera()">Nueva Carrera</button>
             </div>
         </div>
-        <div id="feedback" class="card"></div>
+
         <div class="card">
             <div class="button-group">
-                <button onclick="mostrarRitmosPorKm()">Analizar Ritmos</button>
                 <button onclick="prepararYExportarGPX()">Exportar Ruta GPX</button>
-            </div>
-            <div class="button-group">
                 <button onclick="guardarCarrera()">Guardar Carrera</button>
                 <button onclick="toggleCarrerasGuardadas()">Mostrar/Ocultar Carreras Guardadas</button>
             </div>
-            <button onclick="tomarFoto()">Tomar Foto</button>
         </div>
         <div id="carrerasGuardadas" class="card"></div>
         <div id="map"></div>
         <footer>
-            <p>Versión de prueba</p>
+            <p>&copy; 2024 Diego Valdés. Todos los derechos reservados.</p>
         </footer>
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNoJAfM3yuVwAcmXoJ2z8whnG2-2TJPpM&libraries=geometry&callback=initMap" async defer></script>
