--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@ h1 {
     </div>
 </div>
         <!-- Contenedor de la imagen de Instagram -->
-        <a href="https://www.instagram.com/tu_usuario" target="_blank" class="instagram-link">
-            <div class="instagram-avatar">
-                <img src="ruta/a/tu-imagen.jpg" alt="Instagram Avatar">
-            </div>
-        </a>
-        <h1>Escoge tu Ritmo</h1>
+        <a href="https://www.instagram.com/accounts/login/" target="_blank" class="instagram-link">
+    <div class="instagram-avatar">
+        <img src="ruta_a_tu_imagen.jpg" alt="Instagram Avatar">
+    </div>
+</a>
+       <h1>Escoge tu Ritmo</h1>
         <div class="datos-carrera-container">
             <div id="creator-info">RunnersPace Pro</div>
             <div class="fila">
